--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,26 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Andreas Blog </title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-</head>
-<body> 
-  <div>
-    <h1><a href="/">Django Boys Blog</a></h1>
-  </div>
-  <br> <br>  
-  <div>
-    {% for post in allPosts %}     
-      <h2> <a href=""> {{ post }} </a> </h2>
-      <p> Published: {{ post.published_date }} </p>
-      <p> {{ post.text | linebreaksbr }} </p>
-      <br><br>
-    {%  endfor %}  
-  </div>
-</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+  {% for post in allPosts %}  
+    <div class="post">   
+      <h2> <a href="{% url 'post_detail' pk=post.pk %}"> {{ post }} </a> </h2>
+      <div class="date"> <p> Published: {{ post.published_date }} </p> </div>
+      <div class="clearing"></div>
+      <p> {{ post.text | linebreaksbr }} </p> 
+    </div>     
+  {%  endfor %} 
+{% endblock %}
